color fix for text in fullscreen mode on Safari

--- a/public/style/dilab.css
+++ b/public/style/dilab.css
@@ -2073,6 +2073,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
+    color: white;
 }
 
 /* Fullscreen, lyrics part */
